--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </section>
     <section class="mySlides fs-img1" id="full-screen-img1">
-        <img class="mySlides" src="img/money.jpg">
+        <img src="img/money.jpg">
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
@@ -34,7 +34,7 @@
         </div>
     </section>
     <section class="mySlides fs-img2" id="full-screen-img2">
-        <img class="mySlides" src="img/failure.jpg">
+        <img src="img/failure.jpg">
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
@@ -43,7 +43,7 @@
         </div>
     </section>
     <section class="mySlides fs-img3" id="full-screen-img3">
-        <img class="mySlides" src="img/stock.jpg">
+        <img src="img/stock.jpg">
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
@@ -52,7 +52,7 @@
         </div>
     </section>
     <section class="mySlides fs-img4" id="full-screen-img4">
-        <img class="mySlides" src="img/broke.jpg">
+        <img src="img/broke.jpg">
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
@@ -61,7 +61,7 @@
         </div>
     </section>
     <section class="mySlides fs-img5" id="full-screen-img5">
-        <img class="mySlides" src="img/outsource.jpg">
+        <img src="img/outsource.jpg">
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
@@ -70,7 +70,7 @@
         </div>
     </section>
     <section class="mySlides fs-img6" id="full-screen-img6">
-        <img class="mySlides" src="img/gamble.jpg">
+        <img src="img/gamble.jpg">
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
@@ -106,7 +106,7 @@
             var i;
             var x = document.getElementsByClassName("mySlides");
             if (n > 7) {slideIndex = 1}
-            if (n < 1) {slideIndex = 7} ;
+            if (n < 1) {slideIndex = 7}
             for (i = 0; i < 7; i++) {
                 x[i].style.display = "none";
             }
