--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </section>
     <section class="mySlides fs-img1" id="full-screen-img1">
-        <img src="img/money.jpg">
+        <img src="img/money.jpg" style="object-fit: cover; min-width: 100%">
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
@@ -34,7 +34,7 @@
         </div>
     </section>
     <section class="mySlides fs-img2" id="full-screen-img2">
-        <img src="img/failure.jpg">
+        <img src="img/failure.jpg" style="object-fit: cover; min-width: 100%">
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
@@ -43,7 +43,7 @@
         </div>
     </section>
     <section class="mySlides fs-img3" id="full-screen-img3">
-        <img src="img/stock.jpg">
+        <img src="img/stock.jpg" style="object-fit: cover; min-width: 100%">
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
@@ -52,7 +52,7 @@
         </div>
     </section>
     <section class="mySlides fs-img4" id="full-screen-img4">
-        <img src="img/broke.jpg">
+        <img src="img/broke.jpg" style="object-fit: cover; min-width: 100%">
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
@@ -61,7 +61,7 @@
         </div>
     </section>
     <section class="mySlides fs-img5" id="full-screen-img5">
-        <img src="img/outsource.jpg">
+        <img src="img/outsource.jpg" style="object-fit: cover; min-width: 100%">
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
@@ -70,7 +70,7 @@
         </div>
     </section>
     <section class="mySlides fs-img6" id="full-screen-img6">
-        <img src="img/gamble.jpg">
+        <img src="img/gamble.jpg" style="object-fit: cover; min-width: 100%">
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
