--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Optional: some overlay text to describe the video -->
         <div class="content">
             <h1>Social Security</h1>
-            <p>Lorem ipsum...</p>
+            <p>What seems like free money comes at a high cost...</p>
             <!-- Use a button to pause/play the video with JavaScript -->
             <button id="myBtn" onclick="myFunction()">Pause</button>
         </div>
@@ -29,8 +29,8 @@
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
-            <h1>Social Security</h1>
-            <p>Lorem ipsum...</p>
+            <h1>The Goal</h1>
+            <p>Social Security was originally created to help people budget money into a government fund which can be taken from when retired, handicapped, etc.</p>
         </div>
     </section>
     <section class="mySlides fs-img2" id="full-screen-img2">
@@ -38,8 +38,8 @@
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
-            <h1>Social Security</h1>
-            <p>Lorem ipsum...</p>
+            <h1>What is wrong with that?</h1>
+            <p>To get your money, you need a good future workforce. I wouldn't bet my money on that.</p>
         </div>
     </section>
     <section class="mySlides fs-img3" id="full-screen-img3">
@@ -47,8 +47,8 @@
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
-            <h1>Social Security</h1>
-            <p>Lorem ipsum...</p>
+            <h1>The Economy Doesn't Help Much</h1>
+            <p>Soon enough the stock market will fail again and your money will be forced to fall with it.</p>
         </div>
     </section>
     <section class="mySlides fs-img4" id="full-screen-img4">
@@ -56,8 +56,8 @@
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
-            <h1>Social Security</h1>
-            <p>Lorem ipsum...</p>
+            <h1>Unemployment</h1>
+            <p>Even if we had a skilled workforce, unemployment can lead to a reduced social security budget.</p>
         </div>
     </section>
     <section class="mySlides fs-img5" id="full-screen-img5">
@@ -65,8 +65,8 @@
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
-            <h1>Social Security</h1>
-            <p>Lorem ipsum...</p>
+            <h1>Reduced Workforce</h1>
+            <p>Continued technological advances and cheap foreign labour overtake local jobs and take money out of our economy.</p>
         </div>
     </section>
     <section class="mySlides fs-img6" id="full-screen-img6">
@@ -74,8 +74,8 @@
         <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
         <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         <div class="content">
-            <h1>Social Security</h1>
-            <p>Lorem ipsum...</p>
+            <h1>Gambling</h1>
+            <p>The whole premise of social security is gambling your money in a ponzi scheme. The government forces you to buy into this epedemic without any choice.</p>
         </div>
     </section>
     <script>
